libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__english_sentence.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Ok": {
    "data_decls": [
      {
        "name": "Subject",
        "variants": {
          "dog": [],
          "cow": [],
          "marmot": [],
          "hedgehog": []
        }
      }
    ],
    "rule_decls": [
      {
        "signature": {
          "name": "start",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "RuleRef": {
                    "rule": "english-sentence",
                    "args": []
                  }
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "english-sentence",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "the"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "eats"
                },
                {
                  "RuleRef": {
                    "rule": "object",
                    "args": []
                  }
                },
                "Plus",
                {
                  "StrLit": "."
                }
              ],
              [
                {
                  "StrLit": "the"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "hits"
                },
                {
                  "RuleRef": {
                    "rule": "object",
                    "args": []
                  }
                },
                {
                  "StrLit": "with a bat."
                }
              ],
              [
                {
                  "StrLit": "the"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "stumbles upon"
                },
                {
                  "RuleRef": {
                    "rule": "object",
                    "args": []
                  }
                },
                {
                  "RuleRef": {
                    "rule": "when",
                    "args": []
                  }
                },
                "Plus",
                {
                  "StrLit": "."
                }
              ],
              [
                {
                  "StrLit": "look at that"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          "1"
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "go. go"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          "1"
                        ]
                      }
                    ]
                  }
                },
                "Plus",
                {
                  "StrLit": ", go."
                }
              ],
              [
                {
                  "StrLit": "the"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "began setting"
                },
                {
                  "RuleRef": {
                    "rule": "object",
                    "args": []
                  }
                },
                {
                  "StrLit": "on fire."
                }
              ],
              [
                {
                  "RuleRef": {
                    "rule": "english-sentence",
                    "args": []
                  }
                },
                {
                  "RuleRef": {
                    "rule": "connective",
                    "args": []
                  }
                },
                "Plus",
                {
                  "StrLit": ","
                },
                {
                  "RuleRef": {
                    "rule": "english-sentence",
                    "args": []
                  }
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "when",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "while on their morning walk"
                }
              ],
              [
                {
                  "StrLit": "during their annual checkup"
                }
              ],
              [
                {
                  "StrLit": "upon stepping outdoors"
                }
              ],
              [
                {
                  "StrLit": "while mother is out"
                }
              ],
              [
                {
                  "StrLit": "under the cover of darkness"
                }
              ],
              [
                {
                  "StrLit": "at the corner store"
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "subject",
          "parameter_types": [
            "Subject"
          ]
        },
        "cases": [
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "dog"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "dog"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "cow"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "cow"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "hedgehog"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "hedgehog"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "marmot"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "marmot"
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "object",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "the chair"
                }
              ],
              [
                {
                  "StrLit": "the couch"
                }
              ],
              [
                {
                  "StrLit": "the"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                },
                "Plus",
                {
                  "StrLit": "'s lunch"
                }
              ],
              [
                {
                  "StrLit": "an extremely loud"
                },
                {
                  "RuleRef": {
                    "rule": "subject",
                    "args": [
                      {
                        "Variable": [
                          "S",
                          ""
                        ]
                      }
                    ]
                  }
                }
              ],
              [
                {
                  "StrLit": "an obscene amount of"
                },
                {
                  "RuleRef": {
                    "rule": "uncountable-thing",
                    "args": []
                  }
                }
              ],
              [
                {
                  "StrLit": "a steaming pile of"
                },
                {
                  "RuleRef": {
                    "rule": "uncountable-thing",
                    "args": []
                  }
                }
              ],
              [
                {
                  "StrLit": "a lifetime supply of"
                },
                {
                  "RuleRef": {
                    "rule": "uncountable-thing",
                    "args": []
                  }
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "uncountable-thing",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "jelly"
                }
              ],
              [
                {
                  "StrLit": "tuna"
                }
              ],
              [
                {
                  "StrLit": "bees"
                }
              ],
              [
                {
                  "StrLit": "fruit-flies"
                }
              ],
              [
                {
                  "StrLit": "medical bills"
                }
              ],
              [
                {
                  "StrLit": "caramel"
                }
              ],
              [
                {
                  "StrLit": "ketchup and mustard"
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "connective",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "StrLit": "unfortunately"
                }
              ],
              [
                {
                  "StrLit": "but later that day"
                }
              ],
              [
                {
                  "StrLit": "with the greatest of ease"
                }
              ],
              [
                {
                  "StrLit": "with a twitch of it's nose"
                }
              ],
              [
                {
                  "StrLit": "in the blink of an eye"
                }
              ],
              [
                {
                  "StrLit": "having completed the task at hand"
                }
              ],
              [
                {
                  "StrLit": "having exhausted their options"
                }
              ]
            ]
          }
        ]
      }
    ]
  }
}
