libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__parse_error1.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Err": {
    "title": "UNEXPECTED CHARACTER",
    "msg": "I was expecting one of the following characters here: ['.']",
    "loc": {
      "line": "rule start =%$^#@",
      "line_no": 1,
      "column_no": 13
    },
    "trace": [
      "...after trying to apply the following internal parser at line 1 column 13: Many1",
      "...when I expected one of ['\\\"', '+', '@'] at line 1 column 13",
      "...after trying to apply the following internal parser at line 1 column 13: TakeWhile1",
      "...while parsing a lowercase identifier at line 1 column 13",
      "...while parsing a rule reference at line 1 column 13",
      "...after trying to apply the following internal parser at line 1 column 13: Alt",
      "...while parsing a sentential form at line 1 column 13",
      "...while parsing a sentential form rule body at line 1 column 13",
      "...after trying to apply the following internal parser at line 1 column 13: Alt",
      "...while parsing a rule definition at line 1 column 6",
      "...while parsing a top-level definition at line 1 column 1",
      "...while parsing the full grammar at line 1 column 1"
    ]
  }
}
