libaffix/src/snapshots/libaffix__tests__PARSE_SNAPSHOT__variables-in-patterns.snap
---
source: libaffix/src/lib.rs
expression: parse_res
---
{
  "Ok": {
    "data_decls": [
      {
        "name": "GrammaticalGender",
        "variants": {
          "nonbinary": [],
          "masculine": [
            [
              {
                "StrLit": "m"
              }
            ]
          ],
          "neutral": [],
          "feminine": [
            [
              {
                "StrLit": "f"
              }
            ]
          ]
        }
      }
    ],
    "rule_decls": [
      {
        "signature": {
          "name": "start",
          "parameter_types": []
        },
        "cases": [
          {
            "guard": {
              "requirements": []
            },
            "alternatives": [
              [
                {
                  "RuleRef": {
                    "rule": "they",
                    "args": [
                      {
                        "Variable": [
                          "Gender",
                          ""
                        ]
                      }
                    ]
                  }
                },
                {
                  "StrLit": "walked to the store."
                }
              ]
            ]
          }
        ]
      },
      {
        "signature": {
          "name": "they",
          "parameter_types": [
            "Gender"
          ]
        },
        "cases": [
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "nb"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "they"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variant": "ntrl"
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "it"
                }
              ]
            ]
          },
          {
            "guard": {
              "requirements": [
                {
                  "Variable": [
                    "Gender",
                    "1"
                  ]
                }
              ]
            },
            "alternatives": [
              [
                {
                  "StrLit": "they"
                },
                {
                  "StrLit": "("
                },
                "Plus",
                {
                  "DataVariable": [
                    "Gender",
                    "1"
                  ]
                },
                "Plus",
                {
                  "StrLit": ")"
                }
              ]
            ]
          }
        ]
      }
    ]
  }
}
